# header-ai-train

./: .gitignore  IMPLEMENTATION_LOG.md  NAB_EVALUATION.md  README.md  REFERENCES.md  VERSION_IMPLEMENTATION_DETAILS.md  VERSION_PLAN.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: setup_env.ps1  verify_env.ps1
src/header_ai_train/: __init__.py  cli.py  dataset.py  evaluate.py  export_onnx.py  model.py  train.py  validate_onnx.py
